# xlwings-rpc

./: .gitignore  API_SPEC.md  README.md  pyproject.toml  setup.py  test_chart_fix.py
tests/: __init__.py  create_test_excel.py  test_data.sh  test_data_request.json  test_json_encoder.py  test_json_string.sh  test_request.json
xlwings_rpc/: __init__.py  __main__.py  server.py
xlwings_rpc/adapters/: __init__.py  app_adapter.py  book_adapter.py  chart_adapter.py  range_adapter.py  sheet_adapter.py
xlwings_rpc/methods/: __init__.py  app.py  book.py  chart.py  range.py  sheet.py
xlwings_rpc/schemas/: __init__.py  app_schemas.py  base.py
xlwings_rpc/utils/: __init__.py  converters.py  errors.py  json_encoder.py
